--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -16,3 +16,11 @@ collections:
       - { label: 'Publish Date', name: 'date', widget: 'datetime' }
       - { label: 'Description', name: 'description', widget: 'string' }
       - { label: 'Body', name: 'body', widget: 'markdown' }
+ - name: 'about'
+    label: 'About Page'
+    folder: 'content/about/index.md'
+    editor:
+      preview: false
+    fields:
+      - { label: 'Title', name: 'title', widget: 'string' }
+      - { label: 'Body', name: 'body', widget: 'markdown' }
