--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -18,7 +18,7 @@ collections:
       - { label: 'Body', name: 'body', widget: 'markdown' }
   - name: 'about'
     label: 'About Page'
-    folder: 'content/about/index.md'
+    file: 'content/about/index.md'
     editor:
       preview: false
     fields:
