--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -16,11 +16,19 @@ collections:
       - { label: 'Publish Date', name: 'date', widget: 'datetime' }
       - { label: 'Description', name: 'description', widget: 'string' }
       - { label: 'Body', name: 'body', widget: 'markdown' }
-  - name: 'about'
-    label: 'About Page'
-    file: 'content/about/index.md'
-    editor:
-      preview: false
-    fields:
-      - { label: 'Title', name: 'title', widget: 'string' }
-      - { label: 'Body', name: 'body', widget: 'markdown' }
+  - name: 'pages'
+    label: 'Pages'
+    files:
+      - file: 'content/index.md'
+        label: 'Landing Page'
+        name: 'index'
+        fields:
+          - {label: Title, name: title, widget: string}
+          - {label: Heading, name: heading, widget: string}
+          - {label: Description, name: description, widget: string}
+      - file: 'content/about/index.md'
+        label: 'About'
+        name: 'about'
+        fields:
+          - {label: 'Title', name: 'title', widget: 'string'}
+          - {label: 'Body', name: 'body', widget: 'markdown'}
