--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -35,7 +35,7 @@ collections:
   - name: 'pages'
     label: 'Custom Page'
     folder: 'content/'
-    slug: {{slug}}
+    slug: '{{slug}}'
     create: true
     editor:
       preview: false
